Add public folder to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -280,3 +280,7 @@ fabric.properties
 # Sonarlint plugin
 
 # End of https://www.gitignore.io/api/osx,node,linux,webstorm,phpstorm,sass,code
+
+
+# custom
+public/
