--- a/app/package.json
+++ b/app/package.json
@@ -6,15 +6,27 @@
   "description": "Collaborative Spotify playlist",
   "author": "Weslley Cavalcante",
   "devDependencies": {
-    "eslint": "^5.16.0"
-  },
-  "scripts": {
-    "eslint": "eslint --init",
-    "start": "webpack-dev-server --inline --hot --color"
-  },
-  "dependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "babel-loader": "^8.0.5",
+    "eslint": "^5.16.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
+  },
+  "scripts": {
+    "eslint": "eslint --init",
+    "start": "webpack-dev-server --inline --hot --color",
+    "build": "webpack"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
+  },
+  "dependencies": {
+    "axios": "^0.18.0"
   }
 }
