--- a/.gitignore
+++ b/.gitignore
@@ -281,6 +281,6 @@ fabric.properties
 
 # End of https://www.gitignore.io/api/osx,node,linux,webstorm,phpstorm,sass,code
 
-
 # custom
 public/
+.env
