--- a/app/source/package.json
+++ b/app/source/package.json
@@ -8,13 +8,19 @@
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
+    "autoprefixer": "^9.6.0",
     "babel-loader": "^8.0.5",
+    "css-loader": "^3.0.0",
     "eslint": "^5.16.0",
-    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-dev-server": "^3.2.1",
+    "webpack-stream": "^5.2.1"
   },
   "scripts": {
     "eslint": "eslint --init",
@@ -25,6 +31,5 @@
     "presets": [
       "@babel/preset-env"
     ]
-  },
-  "dependencies": {}
+  }
 }
