--- a/app/server/package.json
+++ b/app/server/package.json
@@ -6,15 +6,17 @@
   "description": "Collaborative Spotify playlist, server config",
   "author": "Weslley Cavalcante",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "query-string": "^6.6.0",
     "request": "^2.88.0"
   },
   "devDependencies": {
     "dotenv": "^7.0.0",
+    "eslint": "^6.0.0",
     "nodemon": "^1.18.11"
   },
   "scripts": {
-    "dev": "nodemon index.js"
+    "start": "nodemon index.js"
   }
 }
