--- a/app/source/package.json
+++ b/app/source/package.json
@@ -12,6 +12,7 @@
     "babel-loader": "^8.0.5",
     "css-loader": "^3.0.0",
     "eslint": "^5.16.0",
+    "eslint-loader": "^2.2.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
@@ -24,7 +25,7 @@
   },
   "scripts": {
     "eslint": "eslint --init",
-    "start": "webpack-dev-server --inline --hot --color --mode development",
+    "start": "webpack --inline --hot --color --mode development",
     "build": "webpack --mode production"
   },
   "babel": {
@@ -34,6 +35,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "js-cookie": "^2.2.0",
     "query-string": "^6.8.1"
   }
 }
