Add webpack to dev and prod environments

--- a/app/source/package.json
+++ b/app/source/package.json
@@ -25,8 +25,8 @@
   },
   "scripts": {
     "eslint": "eslint --init",
-    "start": "webpack --inline --hot --color --mode development",
-    "build": "webpack --mode production"
+    "start": "webpack --config webpack.config.dev.js",
+    "build": "webpack --config webpack.config.prod.js"
   },
   "babel": {
     "presets": [
