--- a/app/server/package.json
+++ b/app/server/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^1.18.11"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "production": "node index.js"
   }
 }
