--- a/app/source/package.json
+++ b/app/source/package.json
@@ -21,6 +21,7 @@
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "^4.2.1",
     "webpack-stream": "^5.2.1"
   },
   "scripts": {
